--- a/css/index.css
+++ b/css/index.css
@@ -1,111 +1,37 @@
-
-:root {
-    --DropwDown_Width: 500px;
-    --DropwDown_Height: 30px;
-    --DropwDown_SCROLL_Height: 200px;
-    --DrowpDown_ZIndex: 5000;
-    --MapWidth: 1000px;
-    --MapHeight: 600px;
-}
-
-#map {
-    /*https://calculateaspectratio.com/*/
-    /*4:3*/
-    width: 52.75%;
-    height:90vh;
-    z-index: auto;
-}
-
-div.leaflet-control-attribution.leaflet-control {
-    display: none;
-}
-
-table, th, td {
-    margin: 0 auto 0 auto; /* or margin: 0 auto 0 auto */
-    border: 1px dashed white;
-}
-
-#mapContent {
-    /*margin: 0 auto;*/
-}
-
-#graph1 {
-    /*margin: 0 auto;*/
-    color: #a970ff;
-    text-align: center;
-}
-
-#graph2 {
-    /*margin: 0 auto;*/
-    color: #a970ff;
-    text-align: center;
-}
-
-/*BASIC BUTTON DROP DOWN
-  https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_button
-*/
-.dropbtn {
-    background-color: #634dab;
-    color: white;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    text: center;
+.main-container {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    flex-direction: column;
     width: 100%;
-    height: var(--DropwDown_Height);
-    z-index: var(--DrowpDown_ZIndex);
+    margin: 0;
+}
+
+.map-tool-buttons {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    flex-direction: row;
+    background: #191236;
+    border: #624cab 1px solid;
+    gap: 1rem;
 }
 
 .dropdown {
-    position: relative;
-    display: inline-block;
-    z-index: var(--DrowpDown_ZIndex);
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
     background-color: #634dab;
-    min-width: var(--DropwDown_Width);
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: var(--DrowpDown_ZIndex);
+    color: white;
+    font-size: 1rem;
+    line-height: 2rem;
+    border: none;
+    cursor: pointer;
     text-align: center;
 }
 
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    width: inherit;
-    z-index: var(--DrowpDown_ZIndex);
-}
-
-.dropdown-content a:hover {
-    background-color: #634dab
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-    max-height: var(--DropwDown_SCROLL_Height);
-    overflow-y: scroll;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #634dab;
+.dropdown-btn {
+    width: 3cm;
 }
 
 /*GEOJSON OVERLAY*/
-svg, svg * {
-    pointer-events: all;
-}
-path {
-    pointer-events: all;
-}
-
-#mapSVG {
-    /*position: relative;*/
-}
 .mapPath {
     fill: #000;
     fill-opacity: .1;
@@ -114,11 +40,26 @@ path {
     stroke-width: 1px;
     pointer-events: all;
 }
-.mapPath:hover {
-    fill: orange !important;
-    fill-opacity: 1.0 !important;
-    cursor: cell !important;
+
+.map-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
 }
 
+#map {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+    /*https://calculateaspectratio.com/*/
+    /*4:3*/
+    width: 100%;
+    height: 70vh;
+}
 
-
+/*Turn off cringe leaflet banner*/
+div.leaflet-control-attribution.leaflet-control {
+    display: none;
+}
