--- a/css/index.css
+++ b/css/index.css
@@ -63,3 +63,65 @@
 div.leaflet-control-attribution.leaflet-control {
     display: none;
 }
+
+
+.context-bar {
+    display: flex;
+    flex-direction: row;
+    background: #191236;
+    border: #624cab 1px solid;
+}
+
+.context-bar-item {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+}
+
+
+.float-window {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    justify-content: center;
+    /*SEE size in mKScatter*/
+    width: 700px;
+    z-index: 9000;
+
+}
+
+.float-window-nav {
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    justify-content: center;
+    line-height: 2rem;
+    border: green 1px solid;
+}
+
+.float-window-nav-title {
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*justify-items: center;*/
+    /*justify-content: center;*/
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    border: red 1px solid;
+}
+
+.float-window-nav-btns {
+    display: flex;
+    float: right;
+    border: yellow 1px solid;
+}
+
+.float-window-content {
+    width: fit-content;
+
+    /*APPLY TO SVG*/
+    /*overflow: auto;*/
+    /*resize: both;*/
+}
+
+
