--- a/css/index.css
+++ b/css/index.css
@@ -56,7 +56,7 @@
     /*https://calculateaspectratio.com/*/
     /*4:3*/
     width: 100%;
-    height: 70vh;
+    height: 80vh;
 }
 
 /*Turn off cringe leaflet banner*/
@@ -80,13 +80,16 @@ div.leaflet-control-attribution.leaflet-control {
 
 
 .float-window {
+    z-index: 9000;
+    top: 10%;
+    position: absolute;
     display: flex;
     flex-direction: column;
     justify-items: center;
     justify-content: center;
     /*SEE size in mKScatter*/
     width: 700px;
-    z-index: 9000;
+
 
 }
 
