--- a/css/index.css
+++ b/css/index.css
@@ -59,7 +59,7 @@
     /*https://calculateaspectratio.com/*/
     /*4:3*/
     width: 100%;
-    height: 80vh;
+    height: 90vh;
 }
 
 /*Turn off cringe leaflet banner*/
@@ -73,6 +73,7 @@ div.leaflet-control-attribution.leaflet-control {
     flex-direction: row;
     background: #191236;
     border: #c387ff 1px solid;
+    flex-wrap: wrap;
 
 }
 
@@ -80,8 +81,8 @@ div.leaflet-control-attribution.leaflet-control {
     display: flex;
     flex-direction: column;
     width: fit-content;
-    padding-right: 0.3rem;
-
+    /*width: 12rem;*/
+    padding-right: 0.2rem;
 }
 
 .content-bar-item-button {
