--- a/css/index.css
+++ b/css/index.css
@@ -103,7 +103,7 @@ div.leaflet-control-attribution.leaflet-control {
     justify-items: center;
     justify-content: center;
     /*SEE size in mKScatter*/
-    width: 700px;
+    width: fit-content;
     padding-bottom: 0;
     background: #191236;
 
@@ -134,7 +134,6 @@ div.leaflet-control-attribution.leaflet-control {
 .float-window-nav-btns {
     display: flex;
     float: right;
-
 }
 .float-window-indv-buttons{
     border: #c387ff 2px solid;
@@ -143,7 +142,6 @@ div.leaflet-control-attribution.leaflet-control {
 
 .float-window-content {
     width: fit-content;
-
     /*APPLY TO SVG*/
     /*overflow: auto;*/
     /*resize: both;*/
