--- a/css/index.css
+++ b/css/index.css
@@ -68,6 +68,28 @@ div.leaflet-control-attribution.leaflet-control {
 }
 
 
+.legend {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 18px;
+    color: #555;
+    background-color: rgba(255, 255, 255, 0.75);
+    padding: 0.5rem;
+}
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    opacity: 0.7;
+}
+
+.legend b {
+    width: fit-content;
+    font-size: small;
+}
+
+
 .context-bar {
     display: flex;
     flex-direction: row;
