--- a/css/base.css
+++ b/css/base.css
@@ -13,7 +13,7 @@ html {
     scrollbar-shadow-color: #646464;
     scrollbar-dark-shadow-color: #646464;
 }
-::-webkit-scrollbar { width: 8px; height: 3px;}
+::-webkit-scrollbar { width: 0.8rem; height: 0.5rem;}
 ::-webkit-scrollbar-button {  background-color: #666; }
 ::-webkit-scrollbar-track {  background-color: #646464;}
 ::-webkit-scrollbar-track-piece { background-color: #000;}
