--- a/css/index.css
+++ b/css/index.css
@@ -204,10 +204,55 @@ div.leaflet-control-attribution.leaflet-control {
     opacity: 0.7;
 }
 
+.legend i:hover {
+    border: #6e46b4 1px solid;
+}
+
 .legend b {
     width: fit-content;
     font-size: small;
 }
+
+
+/*Tooltip*/
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #191237;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 150%;
+    left: 50%;
+    margin-left: -60px;
+}
+
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: black transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
 
 
 .context-bar {
